--- a/media.html
+++ b/media.html
@@ -144,6 +144,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar1.jpg">
 
+  <script src="lav_particle.js"></script>
+
 </head>
 
 <body>
@@ -431,6 +433,9 @@
         </div>
     </section>
 </div>
+
+<!-- Lavparticle-->
+<canvas id="canvas"></canvas>
 
 <!-- Footer
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
