--- a/media.html
+++ b/media.html
@@ -150,6 +150,9 @@
 
 <body>
 
+  <!-- Particle Animation Canvas -->
+  <canvas id="canvas"></canvas>
+
   <!-- Navbar
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <nav class="navbar">
