--- a/media.html
+++ b/media.html
@@ -138,6 +138,14 @@
         section {
             margin-top: 40px; /* Add space between sections */
         }
+        canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: -1; /* Ensure the canvas is behind other content */
+            width: 100%;
+            height: 100%;
+        }
       </style>
 
   <!-- Favicon
