--- a/media.html
+++ b/media.html
@@ -146,6 +146,26 @@
             width: 100%;
             height: 100%;
         }
+        #canvas-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        }
+        #overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+        }
+        #content {
+        position: relative;
+        z-index: 2; /* Ensure content appears above the overlay and particles */
+        /* Add your styles for webpage content */
+        }
       </style>
 
   <!-- Favicon
@@ -199,7 +219,10 @@
     </nav>
 
 <!-- Lavparticle-->
-<canvas id="canvas"></canvas>
+<div id="canvas-container">
+    <canvas id="canvas"></canvas>
+    <div id="overlay"></div>
+</div>
     
 
   <!-- Primary Page Layout
