--- a/lav_test.html
+++ b/lav_test.html
@@ -14,6 +14,6 @@
 <!-- The canvas where the particle animation is rendered -->
 <canvas id="canvas"></canvas>
 <!-- Include the JavaScript file for the particle animation -->
-<script src="lav_particle.js"></script>
+<script src="four.js"></script>
 </body>
 </html>
