--- a/about.html
+++ b/about.html
@@ -88,6 +88,18 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+    </div>
+    <div class="row">
       <div class="column" style="margin-top: 10%">
 
         <!-- Your Image Here -->
