--- a/about.html
+++ b/about.html
@@ -46,6 +46,12 @@
     height: 100%;
     filter: blur(10px);
     }
+    .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh; /* Ensure the container takes up the full height of the viewport */
+    }
   </style>
 </head>
 
@@ -87,18 +93,6 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
-    <div class="row">
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-    </div>
     <div class="row">
       <div class="column" style="margin-top: 10%">
 
