--- a/media.html
+++ b/media.html
@@ -27,9 +27,8 @@
             Dark:   css/skeleton-dark.css
      -->
 
-    <!-- 
-        <link rel="stylesheet" href="css/skeleton-auto.css">
-     -->
+    
+    <link rel="stylesheet" href="css/skeleton-auto.css">
 
     <!-- Navbar -->
     <link rel="stylesheet" href="css/navbar.css">
@@ -50,9 +49,10 @@
 
         /* Container style */
         .container {
-          max-width: 1200px;
-          margin: 0 auto;
-          padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh; 
         }
     
         /* Row style */
