--- a/socials.html
+++ b/socials.html
@@ -47,6 +47,12 @@
     height: 100%;
     filter: blur(10px);
     }
+    .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh; /* Ensure the container takes up the full height of the viewport */
+    }
   </style>
 
 </head>
