--- a/media.html
+++ b/media.html
@@ -27,8 +27,9 @@
             Dark:   css/skeleton-dark.css
      -->
 
-    
-    <link rel="stylesheet" href="css/skeleton-auto.css">
+    <!-- 
+        <link rel="stylesheet" href="css/skeleton-auto.css">
+     -->
 
     <!-- Navbar -->
     <link rel="stylesheet" href="css/navbar.css">
@@ -49,10 +50,9 @@
 
         /* Container style */
         .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh; 
+          max-width: 1200px;
+          margin: 0 auto;
+          padding: 20px;
         }
     
         /* Row style */
