--- a/media.html
+++ b/media.html
@@ -17,9 +17,9 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
+    <!--
         <link rel="stylesheet" href="css/normalize.css">
-
+    -->
 
     <!-- Themes:
             Auto:   css/skeleton-auto.css
@@ -129,6 +129,11 @@
             background-color: #ccc;
         }
 
+        /* Style the container */
+        .container {
+            margin-right: 220px; /* Adjust margin-right to accommodate side navbar width */
+        }
+
         /* Style the sections */
         section {
             margin-top: 40px; /* Add space between sections */
@@ -140,7 +145,26 @@
             z-index: -1; /* Ensure the canvas is behind other content */
             width: 100%;
             height: 100%;
-            filter: blur(10px);
+        }
+        #canvas-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        }
+        #overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+        }
+        #content {
+        position: relative;
+        z-index: 2; /* Ensure content appears above the overlay and particles */
+        /* Add your styles for webpage content */
         }
       </style>
 
@@ -195,7 +219,10 @@
     </nav>
 
 <!-- Lavparticle-->
-<canvas id="canvas"></canvas>
+<div id="canvas-container">
+    <canvas id="canvas"></canvas>
+    <div id="overlay"></div>
+</div>
     
 
   <!-- Primary Page Layout
