--- a/socials.html
+++ b/socials.html
@@ -52,6 +52,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh; /* Ensure the container takes up the full height of the viewport */
+    flex-direction: column; /* Center content vertically */
     }
   </style>
 
