--- a/media.html
+++ b/media.html
@@ -17,19 +17,9 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <!--
-        <link rel="stylesheet" href="css/normalize.css">
-    -->
+  <link rel="stylesheet" href="css/normalize.css">
 
-    <!-- Themes:
-            Auto:   css/skeleton-auto.css
-            Light:  css/skeleton-light.css
-            Dark:   css/skeleton-dark.css
-     -->
-
-    <!-- 
-        <link rel="stylesheet" href="css/skeleton-auto.css">
-     -->
+  <link rel="stylesheet" href="css/skeleton-dark.css">
 
     <!-- Navbar -->
     <link rel="stylesheet" href="css/navbar.css">
