--- a/media.html
+++ b/media.html
@@ -18,10 +18,18 @@
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <!--
-    <link rel="stylesheet" href="css/normalize.css">
-
-    <link rel="stylesheet" href="css/skeleton-dark.css">
+        <link rel="stylesheet" href="css/normalize.css">
     -->
+
+    <!-- Themes:
+            Auto:   css/skeleton-auto.css
+            Light:  css/skeleton-light.css
+            Dark:   css/skeleton-dark.css
+     -->
+
+    <!-- 
+        <link rel="stylesheet" href="css/skeleton-auto.css">
+     -->
 
     <!-- Navbar -->
     <link rel="stylesheet" href="css/navbar.css">
@@ -137,26 +145,7 @@
             z-index: -1; /* Ensure the canvas is behind other content */
             width: 100%;
             height: 100%;
-        }
-        #canvas-container {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        }
-        #overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
-        }
-        #content {
-        position: relative;
-        z-index: 2; /* Ensure content appears above the overlay and particles */
-        /* Add your styles for webpage content */
+            filter: blur(10px);
         }
       </style>
 
@@ -164,9 +153,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar1.jpg">
 
-  <!--
-  <script src="lav_particle.js"></script>
-  -->
+  <script src="four.js"></script>
+
 </head>
 
 <body>
@@ -212,10 +200,7 @@
     </nav>
 
 <!-- Lavparticle-->
-<div id="canvas-container">
-    <canvas id="canvas"></canvas>
-    <div id="overlay"></div>
-</div>
+<canvas id="canvas"></canvas>
     
 
   <!-- Primary Page Layout
