--- a/media.html
+++ b/media.html
@@ -153,7 +153,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar1.jpg">
 
-  <script src="four.js"></script>
+  <script src="lav_particle.js"></script>
 
 </head>
 
