--- a/about.html
+++ b/about.html
@@ -18,12 +18,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
 
-  <!-- Themes:
-          Auto:   css/skeleton-auto.css
-          Light:  css/skeleton-light.css
-          Dark:   css/skeleton-dark.css
-    -->
-  <link rel="stylesheet" href="css/skeleton-auto.css">
+  <link rel="stylesheet" href="css/skeleton-dark.css">
 
   <!-- Brand Styles -->
   <link rel="stylesheet" href="css/brands.css">
