--- a/media.html
+++ b/media.html
@@ -153,8 +153,6 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar1.jpg">
 
-  <script src="lav_particle.js"></script>
-
 </head>
 
 <body>
@@ -201,6 +199,7 @@
 
 <!-- Lavparticle-->
 <canvas id="canvas"></canvas>
+<script src="four.js"></script>
     
 
   <!-- Primary Page Layout
