--- a/media.html
+++ b/media.html
@@ -197,10 +197,11 @@
     </div>
     </nav>
 
-<!-- Lavparticle-->
+<!--
+Lavparticle
 <canvas id="canvas"></canvas>
 <script src="four.js"></script>
-    
+-->
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
