--- a/socials.html
+++ b/socials.html
@@ -33,8 +33,15 @@
   <link rel="icon" type="image/png" href="images/avatar1.jpg">
   
   <style>
+  body {
+    margin: 0; /* Reset default margin */
+    padding: 0; /* Reset default padding */
+    overflow-x: hidden; /* Prevent horizontal scrollbar */
+  }
   canvas {
-    position: relative; /* Change from fixed to relative */
+    position: fixed;
+    top: 0;
+    left: 0;
     z-index: -1;
     width: 100%;
     height: 100%;
@@ -46,7 +53,7 @@
     align-items: center;
     min-height: 100vh;
     flex-direction: column;
-    margin-top: 10%; /* Add margin-top to push content down */
+    padding-top: 10%; /* Add padding-top instead of margin-top */
   }
   </style>
 
