--- a/socials.html
+++ b/socials.html
@@ -34,9 +34,9 @@
   
   <style>
   body {
-    margin: 0; /* Reset default margin */
-    padding: 0; /* Reset default padding */
-    overflow-x: hidden; /* Prevent horizontal scrollbar */
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
   }
   canvas {
     position: fixed;
@@ -53,7 +53,7 @@
     align-items: center;
     min-height: 100vh;
     flex-direction: column;
-    padding-top: 5%; /* Add padding-top instead of margin-top */
+    margin-top: calc(50vh - 50%); /* Adjust margin-top using calc function */
   }
   </style>
 
