--- a/media.html
+++ b/media.html
@@ -197,9 +197,19 @@
     </div>
     </nav>
 
-    <!-- Lavparticle    -->
+    <!-- Lavparticle -->
     <canvas id="canvas"></canvas>
-    <script src="four.js"></script>
+    <script src="lav_particle.js"></script>
+
+    <!-- Call the animation function -->
+    <script>
+        // Wait for the DOM to be fully loaded
+        document.addEventListener('DOMContentLoaded', function() {
+            // Call the function to start the animation
+            startAnimation();
+        });
+    </script>
+
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
