--- a/index.html
+++ b/index.html
@@ -37,6 +37,23 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar1.jpg">
 
+  <style>
+    canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1; /* Ensure the canvas is behind other content */
+    width: 100%;
+    height: 100%;
+    filter: blur(10px);
+    }
+    .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh; /* Ensure the container takes up the full height of the viewport */
+    }
+  </style>
 </head>
 
 <body>
@@ -69,6 +86,10 @@
     </ul>
     </div>
   </nav>
+
+  <canvas id="canvas"></canvas>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="four.js"></script>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
