--- a/media.html
+++ b/media.html
@@ -406,14 +406,13 @@
             <!--
             <div class="column">
                 <div class="image-container">
-                    <a href="https://www.dropout.tv/game-changer">
-                        <img src="images/media/tv/gchan.jpg" alt="Game Changer">
+                    <a href="game-url">
+                        <img src="game-image" alt="game-title">
                     </a>
                 </div>
-                <a href="https://www.dropout.tv/game-changer">
-                <h3>Game Changer</h3>
-                </a>
-                <p>"the only game show where the game changes every show" - I could watch this show forever</p>
+                    <a href="game-url">
+                        <h4>game-title</h4>
+                    </a>
             </div>
             -->
         </div>
@@ -423,34 +422,76 @@
     <section id="Books">
         <h2>Books</h2>
         <!-- Your books content here -->
-        <p>books to come</p>
-        <!--
         <div class="row">
             <div class="column">
                 <div class="image-container">
-                    <img src="movie_image_1.jpg" alt="Movie Image 1">
+                    <a href="https://www.goodreads.com/en/book/show/12287209">
+                        <img src="images/media/games/indik.jpg" alt="Wool (2011) - Hugh Howey">
+                    </a>
                 </div>
-                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-                <h4>Hypnotic Brass Ensemble</h4>
-                <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+                <a href="https://www.goodreads.com/en/book/show/12287209">
+                <h3>Wool (2011) - Hugh Howey</h3>
+                </a>
+                <p>i watched the show (<i>Silo</i>) and didn't mind the first half, but felt that the murder/investigation plot ground the pacing to a halt. the pacing in the book was much better, though I'm curious to see how they handle the lack of plot available for season 2</p>
             </div>
             <div class="column">
                 <div class="image-container">
-                    <img src="movie_image_2.jpg" alt="Movie Image 2">
+                    <a href="https://www.goodreads.com/book/show/44492285-dune-messiah">
+                        <img src="images/media/games/gtfo.webp" alt="Dune Messiah (1969) - Frank Herbert">
+                    </a>
                 </div>
-                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-                <h4>Hypnotic Brass Ensemble</h4>
-                <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+                <a href="https://www.goodreads.com/book/show/44492285-dune-messiah">
+                <h3>Dune Messiah (1969) - Frank Herbert</h3>
+                </a>
+                <p>another adaptation pick - an easy enough read, with enough to keep me engaged, but it was reasonably light-on for plot. i'm curious to see whether Paul calling Hitler's Holocause 'rookie numbers' or telling Irulan to 'cuck him' will make it into the film version</p>
             </div>
+        <!--
             <div class="column">
                 <div class="image-container">
-                    <img src="movie_image_3.jpg" alt="Movie Image 3">
+                    <a href="book-url">
+                        <img src="book-image" alt="book-title">
+                    </a>
                 </div>
-                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-                <h4>Hypnotic Brass Ensemble</h4>
-                <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+                    <a href="book-url">
+                        <h4>book-title</h4>
+                    </a>
             </div>
         -->
+        </div>
+        <h2>Faves and Personal Classics</h2>
+        <div class="row">
+            <div class="column">
+                <div class="image-container">
+                    <a href="https://www.goodreads.com/book/show/17934530-annihilation">
+                        <img src="images/media/books/annih.jpg" alt="Annihilation (2014) - Jeff Vandermeer">
+                    </a>
+                </div>
+                    <a href="https://www.goodreads.com/book/show/17934530-annihilation">
+                        <h4>Annihilation (2014) - Jeff Vandermeer</h4>
+                    </a>
+            </div>
+            <div class="column">
+                <div class="image-container">
+                    <a href="https://www.goodreads.com/book/show/24611567-songs-of-a-dead-dreamer-and-grimscribe">
+                        <img src="images/media/books/soadd.jpg" alt="Songs of a Dead Dreamer and Grimscribe (2015) - Thomas Ligotti">
+                    </a>
+                </div>
+                <a href="https://www.goodreads.com/book/show/24611567-songs-of-a-dead-dreamer-and-grimscribe">
+                    <h4>Songs of a Dead Dreamer and Grimscribe (2015) - Thomas Ligotti</h4>
+                </a>
+            </div>
+            <!--
+            <div class="column">
+                <div class="image-container">
+                    <a href="classics-url">
+                        <img src="classics-image" alt="classics-title">
+                    </a>
+                </div>
+                    <a href="classics-url">
+                        <h4>classics-title</h4>
+                    </a>
+            </div>
+            -->
         </div>
     </section>
 </div>
