--- a/media.html
+++ b/media.html
@@ -426,7 +426,7 @@
             <div class="column">
                 <div class="image-container">
                     <a href="https://www.goodreads.com/en/book/show/12287209">
-                        <img src="images/media/games/indik.jpg" alt="Wool (2011) - Hugh Howey">
+                        <img src="images/media/books/wool.jpg" alt="Wool (2011) - Hugh Howey">
                     </a>
                 </div>
                 <a href="https://www.goodreads.com/en/book/show/12287209">
@@ -437,7 +437,7 @@
             <div class="column">
                 <div class="image-container">
                     <a href="https://www.goodreads.com/book/show/44492285-dune-messiah">
-                        <img src="images/media/games/gtfo.webp" alt="Dune Messiah (1969) - Frank Herbert">
+                        <img src="images/media/books/dmess.jpg" alt="Dune Messiah (1969) - Frank Herbert">
                     </a>
                 </div>
                 <a href="https://www.goodreads.com/book/show/44492285-dune-messiah">
