--- a/media.html
+++ b/media.html
@@ -480,18 +480,16 @@
                     <h4>Songs of a Dead Dreamer and Grimscribe (2015) - Thomas Ligotti</h4>
                 </a>
             </div>
-            <!--
             <div class="column">
                 <div class="image-container">
-                    <a href="classics-url">
-                        <img src="classics-image" alt="classics-title">
+                    <a href="https://www.goodreads.com/book/show/44313716-saga-compendium-one">
+                        <img src="images/media/books/saga.jpg" alt="Saga, Compendium One (2019) - Brian K. Vaughan, Fiona Staples">
                     </a>
                 </div>
-                    <a href="classics-url">
-                        <h4>classics-title</h4>
+                    <a href="https://www.goodreads.com/book/show/44313716-saga-compendium-one">
+                        <h4>Saga, Compendium One (2019) - Brian K. Vaughan, Fiona Staples</h4>
                     </a>
             </div>
-            -->
         </div>
     </section>
 </div>
