--- a/media.html
+++ b/media.html
@@ -445,18 +445,17 @@
                 </a>
                 <p>another adaptation pick - an easy enough read, with enough to keep me engaged, but it was reasonably light-on for plot. i'm curious to see whether Paul calling Hitler's Holocause 'rookie numbers' or telling Irulan to 'cuck him' will make it into the film version</p>
             </div>
-        <!--
             <div class="column">
                 <div class="image-container">
-                    <a href="book-url">
-                        <img src="book-image" alt="book-title">
+                    <a href="https://www.goodreads.com/book/show/40121328-cribsheet">
+                        <img src="book-image" alt="Cribsheet: A Data-Driven Guide to Better, More Relaxed Parenting, from Birth to Preschool (2019) - Emily Oster">
                     </a>
                 </div>
-                    <a href="book-url">
-                        <h4>book-title</h4>
+                    <a href="https://www.goodreads.com/book/show/40121328-cribsheet">
+                        <h4>Cribsheet: A Data-Driven Guide to Better, More Relaxed Parenting, from Birth to Preschool (2019) - Emily Oster</h4>
                     </a>
+                    <p>a little light prep-work</p>
             </div>
-        -->
         </div>
         <h2>Faves and Personal Classics</h2>
         <div class="row">
