--- a/media.html
+++ b/media.html
@@ -448,7 +448,7 @@
             <div class="column">
                 <div class="image-container">
                     <a href="https://www.goodreads.com/book/show/40121328-cribsheet">
-                        <img src="book-image" alt="Cribsheet: A Data-Driven Guide to Better, More Relaxed Parenting, from Birth to Preschool (2019) - Emily Oster">
+                        <img src="images/media/books/csadd.webp" alt="Cribsheet: A Data-Driven Guide to Better, More Relaxed Parenting, from Birth to Preschool (2019) - Emily Oster">
                     </a>
                 </div>
                     <a href="https://www.goodreads.com/book/show/40121328-cribsheet">
