--- a/media.html
+++ b/media.html
@@ -147,6 +147,12 @@
             height: 100%;
             filter: blur(10px);
         }
+        .narrow-block {
+            width: 50%; /* Adjust the width as needed */
+            margin: 0 auto; /* Center-align the block */
+            text-align: justify; /* Justify the text */
+            padding: 10px; /* Add padding for better readability */
+        }
       </style>
 
   <!-- Favicon
@@ -493,7 +499,9 @@
     </section>
 </div>
 
-<p>this is a new page. i'm still sussing out exactly how i want it to work. it'd be ace to link directly to the media, and for musicians with bandcamp pages, that's what i've done, but for media that'll inevitably bounce between streaming services i'm thinking a wiki entry is more helpful than a corporation's landing page. for books i've linked to goodreads - i don't love that, but i'm not sure what'd be better. feel free to @ me with any thoughts, suggestions, and media recs</p>
+<div class="narrow-block">
+    <p>this is a new page. i'm still sussing out exactly how i want it to work. it'd be ace to link directly to the media, and for musicians with bandcamp pages, that's what i've done, but for media that'll inevitably bounce between streaming services i'm thinking a wiki entry is more helpful than a corporation's landing page. for books i've linked to goodreads - i don't love that, but i'm not sure what'd be better. feel free to @ me with any thoughts, suggestions, and media recs</p>
+</div>
 
 <!-- Footer
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
