--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,11 @@
         <p>Personal dalliances and time-wasters:</p>
 
         <!-- GABS 2023 Beer List -->
-        <a class="button button-gabs" href="https://link.jozk.me/gabs.html" target="_blank" rel="noopener">
+        <a class="button button-gabs" href="https://link.jozk.me/gabs24.html" target="_blank" rel="noopener">
+        <img class="icon" src="images/icons/gabsfav.png" alt="GABS Logo">GABS 2024 Beer List</a>
+        <br>
+        <!-- GABS 2023 Beer List -->
+        <a class="button button-gabs" href="https://link.jozk.me/gabs23.html" target="_blank" rel="noopener">
         <img class="icon" src="images/icons/gabsfav.png" alt="GABS Logo">GABS 2023 Beer List</a>
         <br>
         <!-- Test Page -->
