--- a/socials.html
+++ b/socials.html
@@ -6,8 +6,8 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Jourdan's Socials</title>
-  <meta name="description" content="Find me online!">
+  <title>Socials</title>
+  <meta name="description" content="Stomping Grounds">
   <meta name="author" content="Jourdan Keillor">
 
   <!-- Mobile Specific Metas
