--- a/about.html
+++ b/about.html
@@ -72,11 +72,11 @@
     <!-- This is the link for the different pages -->
     <div class="navbar-links">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li> 
-        <li><a href="socials.html">Socials</a></li>
-        <li><a href="media.html">Media</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="index.html" class="tab">Home</a></li>
+        <li><a href="about.html" class="tab active">About</a></li> 
+        <li><a href="socials.html" class="tab">Socials</a></li>
+        <li><a href="media.html" class="tab">Media</a></li>
+        <li><a href="projects.html" class="tab">Projects</a></li>
     </ul>
     </div>
   </nav>
