--- a/socials.html
+++ b/socials.html
@@ -14,12 +14,10 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
   <!-- CSS -->
-    
-    <link rel="stylesheet" href="css/normalize.css">
-
-    <link rel="stylesheet" href="css/skeleton-dark.css">
+    <!-- General -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preload" href="fonts/BerkeleyMonoVariable.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
     <!-- Brand Styles -->
     <link rel="stylesheet" href="css/brands.css">
@@ -37,6 +35,12 @@
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+  }
+  @font-face {
+    font-family: 'Berkeley Mono Variable';
+    src: url('fonts/BerkeleyMonoVariable.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
   }
   canvas {
     position: fixed;
@@ -81,11 +85,11 @@
     <!-- This is the link for the different pages -->
     <div class="navbar-links">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li> 
-        <li><a href="socials.html">Socials</a></li>
-        <li><a href="media.html">Media</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="index.html" class="tab">Home</a></li>
+        <li><a href="about.html" class="tab">About</a></li> 
+        <li><a href="socials.html" class="tab active">Socials</a></li>
+        <li><a href="media.html" class="tab">Media</a></li>
+        <li><a href="projects.html" class="tab">Projects</a></li>
     </ul>
     </div>
   </nav>
