--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
   <nav class="navbar">
     
     <!-- This will display a link to the index page on the upper-left corner -->
-    <div class="brand-title">
+    <div class="header-title">
         <a href="index.html">jozk.me</a>
     </div>
 
