--- a/media.html
+++ b/media.html
@@ -168,7 +168,7 @@
   <nav class="navbar">
   
     <!-- This will display a link to the index page on the upper-left corner -->
-    <div class="brand-title">
+    <div class="header-title">
         <a href="index.html">jozk.me</a>
     </div>
 
@@ -506,7 +506,7 @@
 <!-- Footer
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <footer
-    style="bottom: 0; width: 100%; height: 50px; color: #D8DEE9; text-align: center; display: flex; flex-direction: column; justify-content: center;">
+    style="bottom: 0; width: 100%; height: 50px; color: #282828; text-align: center; display: flex; flex-direction: column; justify-content: center;">
     <div class="row">
         <div class="column">
             <br>
