--- a/media.html
+++ b/media.html
@@ -15,21 +15,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <!--
-        <link rel="stylesheet" href="css/normalize.css">
-    -->
-
-    <!-- Themes:
-            Auto:   css/skeleton-auto.css
-            Light:  css/skeleton-light.css
-            Dark:   css/skeleton-dark.css
-     -->
-
-    <!-- 
-        <link rel="stylesheet" href="css/skeleton-auto.css">
-     -->
+  <!-- CSS -->
+    <!-- General -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preload" href="fonts/BerkeleyMonoVariable.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
     <!-- Navbar -->
     <link rel="stylesheet" href="css/navbar.css">
