--- a/about.html
+++ b/about.html
@@ -14,18 +14,17 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
+  <!-- CSS -->
+    <!-- General -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preload" href="fonts/BerkeleyMonoVariable.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="css/skeleton-dark.css">
+    <!-- Brand Styles -->
+    <link rel="stylesheet" href="css/brands.css">
 
-  <!-- Brand Styles -->
-  <link rel="stylesheet" href="css/brands.css">
-
-  <!-- Navbar -->
-  <link rel="stylesheet" href="css/navbar.css">
-  <script src="./navbar.js"></script>
+    <!-- Navbar -->
+    <link rel="stylesheet" href="css/navbar.css">
+    <script src="./navbar.js"></script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
